hard-gists/8067e173121625e79498/run.log
=== Docker Run Log for 8067e173121625e79498 ===
Started at: Mi 29. Okt 17:38:05 CET 2025

[2025-10-29 17:38:05] START: Running container for 8067e173121625e79498
[2025-10-29 17:38:06] SUCCESS: Container b648a94306641b367d93baa9f01032be4d758f66dfb11a6f8d7211ec0dc8a5f3 started for 8067e173121625e79498
=== Container logs for 8067e173121625e79498 ===
  File "/snippet.py", line 22
    print "GET %s" % start_url
    ^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 8067e173121625e79498 ===
[2025-10-29 17:38:08] INFO: Container b648a94306641b367d93baa9f01032be4d758f66dfb11a6f8d7211ec0dc8a5f3 has stopped
